--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     <div id="presets">
         <!-- Add or remove presets here -->
         <button onclick="loadPreset('https://web.archive.org/web/20250727184014/https://balatro-online.com')">Balatro</button>
-        <button onclick="loadPreset('https://wikipedia.org')">Wikipedia</button>
-        <button onclick="loadPreset('https://openai.com')">OpenAI</button>
+        <button onclick="loadPreset('https://web.archive.org/web/20250925142239/https://cake-logic.itch.io/ultrakill-web-port')">Ultrakill</button>
     </div>
 
     <!-- URL BAR + GO BUTTON -->
