--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iframe Browser with Presets</title>
+    <title>Cooler Math Games</title>
 
     <style>
         body {
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
